; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_adl_pci7x3x.c_adl_pci7x3x_auto_attach.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_adl_pci7x3x.c_adl_pci7x3x_auto_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adl_pci7x3x_boardinfo = type { i32, i32, i32, i32 }
%struct.comedi_device = type { %struct.comedi_subdevice*, i32, i32, %struct.adl_pci7x3x_boardinfo* }
%struct.comedi_subdevice = type { i32, i32, i8*, i32*, i8*, i8*, i8* }
%struct.pci_dev = type { i32 }

@adl_pci7x3x_boards = common dso_local global %struct.adl_pci7x3x_boardinfo* null, align 8
@ENODEV = common dso_local global i32 0, align 4
@COMEDI_SUBD_DI = common dso_local global i8* null, align 8
@SDF_READABLE = common dso_local global i8* null, align 8
@adl_pci7x3x_di_insn_bits = common dso_local global i8* null, align 8
@range_digital = common dso_local global i32 0, align 4
@PCI7X3X_DIO_REG = common dso_local global i64 0, align 8
@PCI743X_DIO_REG = common dso_local global i64 0, align 8
@COMEDI_SUBD_DO = common dso_local global i8* null, align 8
@SDF_WRITABLE = common dso_local global i8* null, align 8
@adl_pci7x3x_do_insn_bits = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.comedi_device*, i64)* @adl_pci7x3x_auto_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adl_pci7x3x_auto_attach(%struct.comedi_device* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.comedi_device*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.pci_dev*, align 8
  %7 = alloca %struct.adl_pci7x3x_boardinfo*, align 8
  %8 = alloca %struct.comedi_subdevice*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.comedi_device* %0, %struct.comedi_device** %4, align 8
  store i64 %1, i64* %5, align 8
  %12 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %13 = call %struct.pci_dev* @comedi_to_pci_dev(%struct.comedi_device* %12)
  store %struct.pci_dev* %13, %struct.pci_dev** %6, align 8
  store %struct.adl_pci7x3x_boardinfo* null, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** @adl_pci7x3x_boards, align 8
  %16 = call i64 @ARRAY_SIZE(%struct.adl_pci7x3x_boardinfo* %15)
  %17 = icmp ult i64 %14, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %2
  %19 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** @adl_pci7x3x_boards, align 8
  %20 = load i64, i64* %5, align 8
  %21 = getelementptr inbounds %struct.adl_pci7x3x_boardinfo, %struct.adl_pci7x3x_boardinfo* %19, i64 %20
  store %struct.adl_pci7x3x_boardinfo* %21, %struct.adl_pci7x3x_boardinfo** %7, align 8
  br label %22

22:                                               ; preds = %18, %2
  %23 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %24 = icmp ne %struct.adl_pci7x3x_boardinfo* %23, null
  br i1 %24, label %28, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* @ENODEV, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %3, align 4
  br label %208

28:                                               ; preds = %22
  %29 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %30 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %31 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %30, i32 0, i32 3
  store %struct.adl_pci7x3x_boardinfo* %29, %struct.adl_pci7x3x_boardinfo** %31, align 8
  %32 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %33 = getelementptr inbounds %struct.adl_pci7x3x_boardinfo, %struct.adl_pci7x3x_boardinfo* %32, i32 0, i32 3
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %36 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %35, i32 0, i32 2
  store i32 %34, i32* %36, align 4
  %37 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %38 = call i32 @comedi_pci_enable(%struct.comedi_device* %37)
  store i32 %38, i32* %11, align 4
  %39 = load i32, i32* %11, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %28
  %42 = load i32, i32* %11, align 4
  store i32 %42, i32* %3, align 4
  br label %208

43:                                               ; preds = %28
  %44 = load %struct.pci_dev*, %struct.pci_dev** %6, align 8
  %45 = call i32 @pci_resource_start(%struct.pci_dev* %44, i32 2)
  %46 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %47 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %46, i32 0, i32 1
  store i32 %45, i32* %47, align 8
  %48 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %49 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %50 = getelementptr inbounds %struct.adl_pci7x3x_boardinfo, %struct.adl_pci7x3x_boardinfo* %49, i32 0, i32 2
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @comedi_alloc_subdevices(%struct.comedi_device* %48, i32 %51)
  store i32 %52, i32* %11, align 4
  %53 = load i32, i32* %11, align 4
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %55, label %57

55:                                               ; preds = %43
  %56 = load i32, i32* %11, align 4
  store i32 %56, i32* %3, align 4
  br label %208

57:                                               ; preds = %43
  store i32 0, i32* %9, align 4
  %58 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %59 = getelementptr inbounds %struct.adl_pci7x3x_boardinfo, %struct.adl_pci7x3x_boardinfo* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %62, label %132

62:                                               ; preds = %57
  %63 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %64 = getelementptr inbounds %struct.adl_pci7x3x_boardinfo, %struct.adl_pci7x3x_boardinfo* %63, i32 0, i32 0
  %65 = load i32, i32* %64, align 4
  %66 = call i32 @min(i32 %65, i32 32)
  store i32 %66, i32* %10, align 4
  %67 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %68 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %67, i32 0, i32 0
  %69 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %68, align 8
  %70 = load i32, i32* %9, align 4
  %71 = sext i32 %70 to i64
  %72 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %69, i64 %71
  store %struct.comedi_subdevice* %72, %struct.comedi_subdevice** %8, align 8
  %73 = load i8*, i8** @COMEDI_SUBD_DI, align 8
  %74 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %75 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %74, i32 0, i32 6
  store i8* %73, i8** %75, align 8
  %76 = load i8*, i8** @SDF_READABLE, align 8
  %77 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %78 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %77, i32 0, i32 5
  store i8* %76, i8** %78, align 8
  %79 = load i32, i32* %10, align 4
  %80 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %81 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %80, i32 0, i32 0
  store i32 %79, i32* %81, align 8
  %82 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %83 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %82, i32 0, i32 1
  store i32 1, i32* %83, align 4
  %84 = load i8*, i8** @adl_pci7x3x_di_insn_bits, align 8
  %85 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %86 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %85, i32 0, i32 4
  store i8* %84, i8** %86, align 8
  %87 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %88 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %87, i32 0, i32 3
  store i32* @range_digital, i32** %88, align 8
  %89 = load i64, i64* @PCI7X3X_DIO_REG, align 8
  %90 = inttoptr i64 %89 to i8*
  %91 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %92 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %91, i32 0, i32 2
  store i8* %90, i8** %92, align 8
  %93 = load i32, i32* %9, align 4
  %94 = add nsw i32 %93, 1
  store i32 %94, i32* %9, align 4
  %95 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %96 = getelementptr inbounds %struct.adl_pci7x3x_boardinfo, %struct.adl_pci7x3x_boardinfo* %95, i32 0, i32 0
  %97 = load i32, i32* %96, align 4
  %98 = load i32, i32* %10, align 4
  %99 = sub nsw i32 %97, %98
  store i32 %99, i32* %10, align 4
  %100 = load i32, i32* %10, align 4
  %101 = icmp ne i32 %100, 0
  br i1 %101, label %102, label %131

102:                                              ; preds = %62
  %103 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %104 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %103, i32 0, i32 0
  %105 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %104, align 8
  %106 = load i32, i32* %9, align 4
  %107 = sext i32 %106 to i64
  %108 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %105, i64 %107
  store %struct.comedi_subdevice* %108, %struct.comedi_subdevice** %8, align 8
  %109 = load i8*, i8** @COMEDI_SUBD_DI, align 8
  %110 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %111 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %110, i32 0, i32 6
  store i8* %109, i8** %111, align 8
  %112 = load i8*, i8** @SDF_READABLE, align 8
  %113 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %114 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %113, i32 0, i32 5
  store i8* %112, i8** %114, align 8
  %115 = load i32, i32* %10, align 4
  %116 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %117 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %116, i32 0, i32 0
  store i32 %115, i32* %117, align 8
  %118 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %119 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %118, i32 0, i32 1
  store i32 1, i32* %119, align 4
  %120 = load i8*, i8** @adl_pci7x3x_di_insn_bits, align 8
  %121 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %122 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %121, i32 0, i32 4
  store i8* %120, i8** %122, align 8
  %123 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %124 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %123, i32 0, i32 3
  store i32* @range_digital, i32** %124, align 8
  %125 = load i64, i64* @PCI743X_DIO_REG, align 8
  %126 = inttoptr i64 %125 to i8*
  %127 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %128 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %127, i32 0, i32 2
  store i8* %126, i8** %128, align 8
  %129 = load i32, i32* %9, align 4
  %130 = add nsw i32 %129, 1
  store i32 %130, i32* %9, align 4
  br label %131

131:                                              ; preds = %102, %62
  br label %132

132:                                              ; preds = %131, %57
  %133 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %134 = getelementptr inbounds %struct.adl_pci7x3x_boardinfo, %struct.adl_pci7x3x_boardinfo* %133, i32 0, i32 1
  %135 = load i32, i32* %134, align 4
  %136 = icmp ne i32 %135, 0
  br i1 %136, label %137, label %207

137:                                              ; preds = %132
  %138 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %139 = getelementptr inbounds %struct.adl_pci7x3x_boardinfo, %struct.adl_pci7x3x_boardinfo* %138, i32 0, i32 1
  %140 = load i32, i32* %139, align 4
  %141 = call i32 @min(i32 %140, i32 32)
  store i32 %141, i32* %10, align 4
  %142 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %143 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %142, i32 0, i32 0
  %144 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %143, align 8
  %145 = load i32, i32* %9, align 4
  %146 = sext i32 %145 to i64
  %147 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %144, i64 %146
  store %struct.comedi_subdevice* %147, %struct.comedi_subdevice** %8, align 8
  %148 = load i8*, i8** @COMEDI_SUBD_DO, align 8
  %149 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %150 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %149, i32 0, i32 6
  store i8* %148, i8** %150, align 8
  %151 = load i8*, i8** @SDF_WRITABLE, align 8
  %152 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %153 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %152, i32 0, i32 5
  store i8* %151, i8** %153, align 8
  %154 = load i32, i32* %10, align 4
  %155 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %156 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %155, i32 0, i32 0
  store i32 %154, i32* %156, align 8
  %157 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %158 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %157, i32 0, i32 1
  store i32 1, i32* %158, align 4
  %159 = load i8*, i8** @adl_pci7x3x_do_insn_bits, align 8
  %160 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %161 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %160, i32 0, i32 4
  store i8* %159, i8** %161, align 8
  %162 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %163 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %162, i32 0, i32 3
  store i32* @range_digital, i32** %163, align 8
  %164 = load i64, i64* @PCI7X3X_DIO_REG, align 8
  %165 = inttoptr i64 %164 to i8*
  %166 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %167 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %166, i32 0, i32 2
  store i8* %165, i8** %167, align 8
  %168 = load i32, i32* %9, align 4
  %169 = add nsw i32 %168, 1
  store i32 %169, i32* %9, align 4
  %170 = load %struct.adl_pci7x3x_boardinfo*, %struct.adl_pci7x3x_boardinfo** %7, align 8
  %171 = getelementptr inbounds %struct.adl_pci7x3x_boardinfo, %struct.adl_pci7x3x_boardinfo* %170, i32 0, i32 1
  %172 = load i32, i32* %171, align 4
  %173 = load i32, i32* %10, align 4
  %174 = sub nsw i32 %172, %173
  store i32 %174, i32* %10, align 4
  %175 = load i32, i32* %10, align 4
  %176 = icmp ne i32 %175, 0
  br i1 %176, label %177, label %206

177:                                              ; preds = %137
  %178 = load %struct.comedi_device*, %struct.comedi_device** %4, align 8
  %179 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %178, i32 0, i32 0
  %180 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %179, align 8
  %181 = load i32, i32* %9, align 4
  %182 = sext i32 %181 to i64
  %183 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %180, i64 %182
  store %struct.comedi_subdevice* %183, %struct.comedi_subdevice** %8, align 8
  %184 = load i8*, i8** @COMEDI_SUBD_DO, align 8
  %185 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %186 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %185, i32 0, i32 6
  store i8* %184, i8** %186, align 8
  %187 = load i8*, i8** @SDF_WRITABLE, align 8
  %188 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %189 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %188, i32 0, i32 5
  store i8* %187, i8** %189, align 8
  %190 = load i32, i32* %10, align 4
  %191 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %192 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %191, i32 0, i32 0
  store i32 %190, i32* %192, align 8
  %193 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %194 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %193, i32 0, i32 1
  store i32 1, i32* %194, align 4
  %195 = load i8*, i8** @adl_pci7x3x_do_insn_bits, align 8
  %196 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %197 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %196, i32 0, i32 4
  store i8* %195, i8** %197, align 8
  %198 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %199 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %198, i32 0, i32 3
  store i32* @range_digital, i32** %199, align 8
  %200 = load i64, i64* @PCI743X_DIO_REG, align 8
  %201 = inttoptr i64 %200 to i8*
  %202 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %8, align 8
  %203 = getelementptr inbounds %struct.comedi_subdevice, %struct.comedi_subdevice* %202, i32 0, i32 2
  store i8* %201, i8** %203, align 8
  %204 = load i32, i32* %9, align 4
  %205 = add nsw i32 %204, 1
  store i32 %205, i32* %9, align 4
  br label %206

206:                                              ; preds = %177, %137
  br label %207

207:                                              ; preds = %206, %132
  store i32 0, i32* %3, align 4
  br label %208

208:                                              ; preds = %207, %55, %41, %25
  %209 = load i32, i32* %3, align 4
  ret i32 %209
}

declare dso_local %struct.pci_dev* @comedi_to_pci_dev(%struct.comedi_device*) #1

declare dso_local i64 @ARRAY_SIZE(%struct.adl_pci7x3x_boardinfo*) #1

declare dso_local i32 @comedi_pci_enable(%struct.comedi_device*) #1

declare dso_local i32 @pci_resource_start(%struct.pci_dev*, i32) #1

declare dso_local i32 @comedi_alloc_subdevices(%struct.comedi_device*, i32) #1

declare dso_local i32 @min(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
